--- a/index.html
+++ b/index.html
@@ -4,14 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crystal Prime – Next-Gen Vaping</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f0f2f5;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 30px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+
+        h1, h2, h3 {
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 6px;
+        }
+
+        h1 {
+            font-size: 2.2rem;
+            margin-bottom: 20px;
+        }
+
+        h2 {
+            font-size: 1.6rem;
+            margin-top: 30px;
+        }
+
+        h3 {
+            font-size: 1.2rem;
+            margin-top: 20px;
+        }
+
+        p {
+            line-height: 1.7;
+            margin-bottom: 15px;
+        }
+
+        strong {
+            color: #000;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
         <h1>How Crystal Prime Is Changing the Vaping Game</h1>
 
-        <p>If you're into bold flavours and thick, satisfying clouds, you know how important it is to have a device that delivers consistently. Whether you're a casual weekend <a href="https://poshvapes.co.uk/collections/crystal-prime-vapes">Buy Crystal prime vapes from Posh Vapes</a>
- or a full-time flavour chaser, one name stands out in the world of next-gen vaping: <strong>Crystal Prime</strong>.</p>
+        <p>If you're into bold flavours and thick, satisfying clouds, you know how important it is to have a device that delivers consistently. Whether you're a casual weekend <a href="https://poshvapes.co.uk/collections/crystal-prime-vapes">Buy Crystal prime vapes from Posh Vapes</a> or a full-time flavour chaser, one name stands out in the world of next-gen vaping: <strong>Crystal Prime</strong>.</p>
 
         <h2>What Makes a Great Vape Experience?</h2>
         <p>It’s more than just big clouds. It’s about combining vapour volume, flavour intensity, and smooth draws into a seamless experience. The goal? To enjoy deep, layered hits that feel great and taste even better.</p>
